fix(core): style fixes - Fix missing rounded property type for input/search - Fix ellipsis/clipping on badges - Fix icon render flash on large sets - Fix dot default display - Improved Logging - Detect possible invalid grid structures - Fix missing card container styles - Fix missing toolbar container styles

--- a/projects/elements/src/card/card.css
+++ b/projects/elements/src/card/card.css
@@ -32,3 +32,10 @@
   --border-bottom: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
   --border-radius: 0;
 }
+
+:host([container='flat']) {
+  --background: transparent;
+  --border-bottom: none;
+  --border-radius: 0;
+  --box-shadow: none;
+}
